{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 13,
  "lineage": "24ec39a7-8ea7-65fc-974a-fce294039a0c",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00fca2d6b253b5849",
            "domain": "vpc",
            "id": "eipalloc-00fca2d6b253b5849",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-15-206-193-205.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.206.193.205",
            "public_ipv4_pool": "amazon",
            "tags": {
              "business_unit": "nj87",
              "environment": "production",
              "it_owner": "niket.joshi@hotmail.com",
              "project": "nj87",
              "type": "vpc"
            },
            "tags_all": {
              "business_unit": "nj87",
              "environment": "production",
              "it_owner": "niket.joshi@hotmail.com",
              "project": "nj87",
              "type": "vpc"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:083173353985:internet-gateway/igw-069aff50f88bfc7c7",
            "id": "igw-069aff50f88bfc7c7",
            "owner_id": "083173353985",
            "tags": {
              "business_unit": "nj87",
              "environment": "production",
              "it_owner": "niket.joshi@hotmail.com",
              "project": "nj87",
              "type": "vpc"
            },
            "tags_all": {
              "business_unit": "nj87",
              "environment": "production",
              "it_owner": "niket.joshi@hotmail.com",
              "project": "nj87",
              "type": "vpc"
            },
            "vpc_id": "vpc-0bc954e1a525655ed"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_01"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00fca2d6b253b5849",
            "association_id": "eipassoc-00c4770b43ff32702",
            "connectivity_type": "public",
            "id": "nat-0b648eda036f765e7",
            "network_interface_id": "eni-0b03a78c4d646b6ce",
            "private_ip": "10.102.10.72",
            "public_ip": "15.206.193.205",
            "subnet_id": "subnet-0c8d5bef526c0290c",
            "tags": {
              "business_unit": "nj87",
              "environment": "production",
              "it_owner": "niket.joshi@hotmail.com",
              "project": "nj87",
              "type": "vpc"
            },
            "tags_all": {
              "business_unit": "nj87",
              "environment": "production",
              "it_owner": "niket.joshi@hotmail.com",
              "project": "nj87",
              "type": "vpc"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.subnet_01",
            "module.vpc.aws_vpc.vpc_01"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08fcbde4ce5f652621080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b648eda036f765e7",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08fcbde4ce5f65262",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.subnet_01",
            "module.vpc.aws_vpc.vpc_01"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-069aff50f88bfc7c7",
            "id": "r-rtb-05346290d2d0ee9a51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05346290d2d0ee9a5",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.vpc_01"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:083173353985:route-table/rtb-08fcbde4ce5f65262",
            "id": "rtb-08fcbde4ce5f65262",
            "owner_id": "083173353985",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "business_unit": "nj87",
              "environment": "production",
              "it_owner": "niket.joshi@hotmail.com",
              "project": "nj87",
              "type": "vpc"
            },
            "tags_all": {
              "business_unit": "nj87",
              "environment": "production",
              "it_owner": "niket.joshi@hotmail.com",
              "project": "nj87",
              "type": "vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bc954e1a525655ed"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc_01"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:083173353985:route-table/rtb-05346290d2d0ee9a5",
            "id": "rtb-05346290d2d0ee9a5",
            "owner_id": "083173353985",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "business_unit": "nj87",
              "environment": "production",
              "it_owner": "niket.joshi@hotmail.com",
              "project": "nj87",
              "type": "vpc"
            },
            "tags_all": {
              "business_unit": "nj87",
              "environment": "production",
              "it_owner": "niket.joshi@hotmail.com",
              "project": "nj87",
              "type": "vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bc954e1a525655ed"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc_01"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ac5b6988b83d61c8",
            "route_table_id": "rtb-08fcbde4ce5f65262",
            "subnet_id": "subnet-08165b99aa212f4f3"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.subnet_02",
            "module.vpc.aws_vpc.vpc_01"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0326b68c89a254d1f",
            "route_table_id": "rtb-05346290d2d0ee9a5",
            "subnet_id": "subnet-0c8d5bef526c0290c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.subnet_01",
            "module.vpc.aws_vpc.vpc_01"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:083173353985:subnet/subnet-0c8d5bef526c0290c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.102.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c8d5bef526c0290c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "083173353985",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "business_unit": "nj87",
              "environment": "production",
              "it_owner": "niket.joshi@hotmail.com",
              "project": "nj87",
              "type": "vpc"
            },
            "tags_all": {
              "business_unit": "nj87",
              "environment": "production",
              "it_owner": "niket.joshi@hotmail.com",
              "project": "nj87",
              "type": "vpc"
            },
            "vpc_id": "vpc-0bc954e1a525655ed"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_01"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:083173353985:subnet/subnet-08165b99aa212f4f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.102.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08165b99aa212f4f3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "083173353985",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "business_unit": "nj87",
              "environment": "production",
              "it_owner": "niket.joshi@hotmail.com",
              "project": "nj87",
              "type": "vpc"
            },
            "tags_all": {
              "business_unit": "nj87",
              "environment": "production",
              "it_owner": "niket.joshi@hotmail.com",
              "project": "nj87",
              "type": "vpc"
            },
            "vpc_id": "vpc-0bc954e1a525655ed"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_01"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:083173353985:vpc/vpc-0bc954e1a525655ed",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.102.0.0/16",
            "default_network_acl_id": "acl-0adff94aa48abf85a",
            "default_route_table_id": "rtb-0aaa55a11f64645d7",
            "default_security_group_id": "sg-03341dfd702823fc9",
            "dhcp_options_id": "dopt-0a4deca7a1a9422c9",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bc954e1a525655ed",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0aaa55a11f64645d7",
            "owner_id": "083173353985",
            "tags": {
              "business_unit": "nj87",
              "environment": "production",
              "it_owner": "niket.joshi@hotmail.com",
              "project": "nj87",
              "type": "vpc"
            },
            "tags_all": {
              "business_unit": "nj87",
              "environment": "production",
              "it_owner": "niket.joshi@hotmail.com",
              "project": "nj87",
              "type": "vpc"
            }
          }
        }
      ]
    }
  ]
}